platforms/gke/base/use-cases/inference-ref-arch/terraform/llm-d/templates/gateway/gateway-internal.tftpl.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ${gateway_name}
  namespace: ${namespace}
  labels:
    app.kubernetes.io/name: llm-d-infra
    app.kubernetes.io/version: "v0.3.0"
    app.kubernetes.io/gateway: ${gateway_name}
    app.kubernetes.io/component: inference-gateway
spec:
  gatewayClassName: "gke-l7-rilb"
  addresses:
    - type: NamedAddress
      value: ${internal_ip_address}
  listeners:
    - port: 80
      protocol: HTTP
      name: default
      allowedRoutes:
        namespaces:
          from: All
